tests/fixtures/negative/interrupt_bind_removed.wrela
// expect: SEM0019: explicit interrupt binding calls are not allowed
module negative.interrupt_bind_removed

data SerialInterrupt { vector: U8 }

driver path SerialConsolePath {
    interrupt receiver -> SerialInterrupt {
        return SerialInterrupt(vector = 1)
    }
}

class Interrupts {
    fn bind(self) {}
}

executor BadBind {
    serial: SerialConsolePath
    interrupts: Interrupts

    on serial.interrupt(event: SerialInterrupt) {
        self.interrupts.bind()
    }
}
